--- a/index.Rmd
+++ b/index.Rmd
@@ -28,7 +28,7 @@ For more than one hundred years, baseball has been a numbers game. We currently 
 
 What makes Statcast so exciting to baseball nerds is its novelty. For centuries, fans used the same statistics to compare players. Yet, all of these statistics were calculated based upon the final result of a given play. Statcast is unique as it tracks the movement of the game. With Statcast, we can examine a ball’s rotations per minute, launch angle and exit velocity, allowing us to calculate the exact position a ball landed on a field, or track ball flight paths like this:
 
-(https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fexplore%2Fstatcast&psig=AOvVaw3rIM0MPB5zdJGnq-E1P3dd&ust=1620942566762000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCJCn6vWPxfACFQAAAAAdAAAAABAD)
+![statcast animation](https://media4.giphy.com/media/LqOCx31NbvhieaBd8a/giphy.gif?cid=ecf05e47lowy5x99ftysj7jkpiex2et90sg3vww9k1to7076&rid=giphy.gif&ct=g)
 
 More simply, Statcast helps us understand how a given event or outcome on the baseball field came to be instead of just observing what that event or outcome was. 
 
