--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Wrangle That Messi Data"
+title: "Code-y Bellinger"
 author: "Willie Cohen, Ethan Samuels, Vaibhav Shah, Stefan Walzer-Goldfeld"
 date: "May 13th, 2021"
 output:
